Adjust services section image width to avoid stretching on medium phone screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,6 +241,12 @@ footer {
     color: #FBC31E;
 }
 
+/* Media query for medium size phone screens (375px and up) */
+#events img {
+    width:85%;
+    max-height: 200px;
+}
+
 /* Media query for tablet screens and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Move and resize hero overlay to prevent obscuring image */
